Rishi Puri working on his personal project

--- a/StyleTransfer-PyTorch.ipynb
+++ b/StyleTransfer-PyTorch.ipynb
@@ -721,7 +721,62 @@
       "14/3537\n",
       "21/3537\n",
       "28/3537\n",
-      "35/3537\n"
+      "35/3537\n",
+      "42/3537\n",
+      "49/3537\n",
+      "56/3537\n",
+      "63/3537\n",
+      "70/3537\n",
+      "77/3537\n",
+      "84/3537\n",
+      "91/3537\n",
+      "98/3537\n",
+      "105/3537\n",
+      "112/3537\n",
+      "119/3537\n",
+      "126/3537\n",
+      "133/3537\n",
+      "140/3537\n",
+      "147/3537\n",
+      "154/3537\n",
+      "161/3537\n",
+      "168/3537\n",
+      "175/3537\n",
+      "182/3537\n",
+      "189/3537\n",
+      "196/3537\n",
+      "203/3537\n",
+      "210/3537\n",
+      "217/3537\n",
+      "224/3537\n",
+      "231/3537\n",
+      "238/3537\n",
+      "245/3537\n",
+      "252/3537\n",
+      "259/3537\n",
+      "266/3537\n",
+      "273/3537\n",
+      "280/3537\n",
+      "287/3537\n",
+      "294/3537\n",
+      "301/3537\n",
+      "308/3537\n",
+      "315/3537\n",
+      "322/3537\n",
+      "329/3537\n",
+      "336/3537\n",
+      "343/3537\n",
+      "350/3537\n",
+      "357/3537\n",
+      "364/3537\n",
+      "371/3537\n",
+      "378/3537\n",
+      "385/3537\n",
+      "392/3537\n",
+      "399/3537\n",
+      "406/3537\n",
+      "413/3537\n",
+      "420/3537\n"
      ]
     }
    ],
@@ -833,7 +888,7 @@
     "\n",
     "Now, if you set the style weights to all be 0 and initialize the starting image to random noise instead of the content source image, you'll reconstruct an image from the feature representation of the content source image. You're starting with total noise, but you should end up with something that looks quite a bit like your original image.\n",
     "\n",
-    "(Similarly, you could do \"texture synthesis\" from scratch if you set the content weight to 0 and initialize the starting image to random noise, but we won't ask you to do that here.) \n",
+    "(Similarly, you could do \"texture synthesis\" from scratch if you set the content weight to 0 and initialize the starting image to random noise)\n",
     "\n",
     "[1] Aravindh Mahendran, Andrea Vedaldi, \"Understanding Deep Image Representations by Inverting them\", CVPR 2015\n",
     "\n",
