Rishi Puri working on his personal project

--- a/StyleTransfer-PyTorch.ipynb
+++ b/StyleTransfer-PyTorch.ipynb
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1196,7 +1196,32 @@
       "3339/3537\n",
       "3346/3537\n",
       "3353/3537\n",
-      "3360/3537\n"
+      "3360/3537\n",
+      "3367/3537\n",
+      "3374/3537\n",
+      "3381/3537\n",
+      "3388/3537\n",
+      "3395/3537\n",
+      "3402/3537\n",
+      "3409/3537\n",
+      "3416/3537\n",
+      "3423/3537\n",
+      "3430/3537\n",
+      "3437/3537\n",
+      "3444/3537\n",
+      "3451/3537\n",
+      "3458/3537\n",
+      "3465/3537\n",
+      "3472/3537\n",
+      "3479/3537\n",
+      "3486/3537\n",
+      "3493/3537\n",
+      "3500/3537\n",
+      "3507/3537\n",
+      "3514/3537\n",
+      "3521/3537\n",
+      "3528/3537\n",
+      "3535/3537\n"
      ]
     }
    ],
@@ -1223,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1245,16 +1270,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/usr/bin/ffmpeg\r\n"
+     ]
+    }
+   ],
    "source": [
     "!which ffmpeg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1276,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1317,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
