--- a/StyleTransfer-PyTorch.ipynb
+++ b/StyleTransfer-PyTorch.ipynb
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,6 +686,8 @@
     "                if s!=-1 and done_ct > int(s*fps):\n",
     "                    print(\"Stopping after \" + str(s) + \" seconds of footage\")\n",
     "                    out.release()\n",
+    "                    for name in names:\n",
+    "                        os.remove(name)\n",
     "                    return avg_fps\n",
     "                done_ct+=1\n",
     "                name = 'xyzfdsf' + str(batch_count)+ '.jpg'\n",
@@ -723,6 +725,8 @@
     "                \n",
     "            else:\n",
     "                out.release()\n",
+    "                for name in names:\n",
+    "                    os.remove(name)\n",
     "                return avg_fps\n"
    ]
   },
@@ -789,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -798,8 +802,8 @@
      "text": [
       "FPS: 59\n",
       "0/295\n",
-      "7/295  |  Average FPS:0.87\n",
-      "14/295  |  Average FPS:0.84\n"
+      "7/295  |  Average FPS:0.83\n",
+      "14/295  |  Average FPS:0.82\n"
      ]
     },
     {
@@ -809,8 +813,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-43-84bacd17235d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#test movie style transfer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mstyletrans_a_mp4\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'styles/dog.mp4'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'styles/starry_night.jpg'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'styles/star_dog.mp4'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mbatchsize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-41-ed472fa1b569>\u001b[0m in \u001b[0;36mstyletrans_a_mp4\u001b[0;34m(movie, style, outputmovie, s, batchsize)\u001b[0m\n\u001b[1;32m    103\u001b[0m                         \u001b[0;32mif\u001b[0m \u001b[0mnumbatches\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    104\u001b[0m                             \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mempty_cache\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 105\u001b[0;31m                             \u001b[0mg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_Graph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    106\u001b[0m                             \u001b[0mg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcapture_begin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    107\u001b[0m                         \u001b[0mimgs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstyletrans\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnames\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstyle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshow\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mdone_ct\u001b[0m \u001b[0;34m==\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatchsize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbatchsize\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-45-84bacd17235d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#test movie style transfer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mstyletrans_a_mp4\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'styles/dog.mp4'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'styles/starry_night.jpg'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'styles/star_dog.mp4'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mbatchsize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-44-11d1db34e53c>\u001b[0m in \u001b[0;36mstyletrans_a_mp4\u001b[0;34m(movie, style, outputmovie, s, batchsize)\u001b[0m\n\u001b[1;32m    105\u001b[0m                         \u001b[0;32mif\u001b[0m \u001b[0mnumbatches\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    106\u001b[0m                             \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mempty_cache\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 107\u001b[0;31m                             \u001b[0mg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_Graph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    108\u001b[0m                             \u001b[0mg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcapture_begin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    109\u001b[0m                         \u001b[0mimgs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstyletrans\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnames\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstyle\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mshow\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mdone_ct\u001b[0m \u001b[0;34m==\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbatchsize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbatchsize\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mRuntimeError\u001b[0m: CUDA graphs may only be used in Pytorch built with CUDA >= 11.0"
      ]
     }
@@ -930,6 +934,24 @@
     "            break\n",
     "    print(\"Fastest Batch Size for Current GPU:\",best_size)\n",
     "tune_for_gpu()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Function to upload a video to youtube \n",
+    "#requires client_secrets.json \n",
+    "#according to https://developers.google.com/youtube/v3/guides/uploading_a_video\n",
+    "import os\n",
+    "def upload_yt(vidpth, title):\n",
+    "    x= str(\"python upload_video.py --file=\") + vidpth + \"--title=\" + '\"' + str(title) + '\"'\n",
+    "                       --description=\"Had fun surfing in Santa Cruz\"\n",
+    "                       --keywords=\"surfing,Santa Cruz\"\n",
+    "                       --category=\"22\"\n",
+    "                       --privacyStatus=\"public\""
    ]
   },
   {
