--- a/StyleTransfer-PyTorch.ipynb
+++ b/StyleTransfer-PyTorch.ipynb
@@ -1489,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1509,7 +1509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -1517,10 +1517,10 @@
      "output_type": "stream",
      "text": [
       "python3 upload_video.py --file=\"styles/star_dog.mp4\" --title=\"Star Dog\" --description=\"deepdream,art,deepstyle,style,AI,deeplearning,automation,neuralnet,trippy,hallucinate\" --keywords=\"deepdream,deepstyle,style,AI,art,deeplearning,automation,neuralnet,trippy,hallucinate\" --privacyStatus=\"public\"\n",
-      "  File \"upload_video.py\", line 133\r\n",
-      "    print \"Uploading file...\"\r\n",
-      "                            ^\r\n",
-      "SyntaxError: Missing parentheses in call to 'print'. Did you mean print(\"Uploading file...\")?\r\n"
+      "  File \"upload_video.py\", line 140\r\n",
+      "    except HttpError, e:\r\n",
+      "                    ^\r\n",
+      "SyntaxError: invalid syntax\r\n"
      ]
     }
    ],
